Estrutura da página

--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ticket Generator</title>
 </head>
 <body>
-    
+    <div> <!-- Container principal -->
+        <header> <!-- Título da Página -->
+            <h1>Evento ABC</h1>
+            <p>Gere seu ingresso personalizado para a conferência ABC!</p>
+        </header>
+
+        <main> <!-- Conteúdo principal -->
+            <div> <!-- Área do formulário -->
+                <h2>Preecha os dados solicitados:</h2>
+
+                <div>
+                    <label for="">Nome Completo:</label>
+                    <input type="text" name="" id="">
+                </div>
+
+                <div>
+                    <label for="">E-mail:</label>
+                    <input type="email" name="" id="">
+                </div>
+
+                <div>
+                    <label for="">Tipo de Ingresso:</label>
+                    <select name="" id="">
+                        <option value="">Estudante</option>
+                        <option value="">Profissional</option>
+                        <option value="">VIP</option>
+                        <option value="">Palestrante</option>
+                    </select>
+                </div>
+
+                <div>
+                    <label for="">Avatar:</label>
+                    <input type="file" name="" id="" accept="image/jpeg, image/png">
+                </div>
+
+                <button>Gerrar Ticket</button>
+
+            </div>
+
+            <div> <!-- Área do Ticket -->
+                <h2>Seu Ingresso:</h2>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
