--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div> <!-- Container principal -->
         <header> <!-- Título da Página -->
-            <h1>Evento ABC</h1>
+            <h1>Ticket ABC</h1>
             <p>Gere seu ingresso personalizado para a conferência ABC!</p>
         </header>
 
@@ -16,23 +16,25 @@
             <div> <!-- Área do formulário -->
                 <h2>Preecha os dados solicitados:</h2>
 
+                <form id="ticketForm" novalidate>
                 <div>
-                    <label for="">Nome Completo:</label>
-                    <input type="text" name="" id="">
+                    <label for="name">*Nome Completo:</label>
+                    <input type="text" name="name" id="name">
                 </div>
 
                 <div>
-                    <label for="">E-mail:</label>
-                    <input type="email" name="" id="">
+                    <label for="email">*E-mail:</label>
+                    <input type="email" name="email" id="email">
                 </div>
 
                 <div>
-                    <label for="">Tipo de Ingresso:</label>
-                    <select name="" id="">
-                        <option value="">Estudante</option>
-                        <option value="">Profissional</option>
-                        <option value="">VIP</option>
-                        <option value="">Palestrante</option>
+                    <label for="type">*Tipo de Ingresso:</label>
+                    <select name="type" id="type" required>
+                        <option value="">Selecione uma opção</option>
+                        <option value="estudante">Estudante</option>
+                        <option value="profissional">Profissional</option>
+                        <option value="vip">VIP</option>
+                        <option value="palestrante">Palestrante</option>
                     </select>
                 </div>
 
@@ -41,8 +43,9 @@
                     <input type="file" name="" id="" accept="image/jpeg, image/png">
                 </div>
 
-                <button>Gerrar Ticket</button>
+                <button type="submit" onclick="isValidEmail()">Gerrar Ticket</button>
 
+                </form>
             </div>
 
             <div> <!-- Área do Ticket -->
@@ -50,5 +53,7 @@
             </div>
         </main>
     </div>
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
