Script para gerar ticket

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <div>
                     <label for="">Avatar:</label>
-                    <input type="file" name="" id="" accept="image/jpeg, image/png">
+                    <input type="file" name="avatar" id="avatar" accept="image/jpeg, image/png">
                     <span id="avatar-error"></span>
                 </div>
 
@@ -54,10 +54,14 @@
 
             <div> <!-- Área do Ticket -->
                 <h2>Seu Ingresso:</h2>
+                <div id="ticketPreview">
+                    <p>Preencha o formulário para visualizar o ticket</p>
+                </div>
             </div>
         </main>
     </div>
 
+    <script src="scripts/ticket.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
